// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Duplicate suggestions aren't rendered 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-47",
          "padding": "MuiList-padding-46",
          "root": "MuiList-root-45",
          "subheader": "MuiList-subheader-48",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-45 MuiList-padding-46"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-3-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-49",
                "selected": "MuiMenuItem-selected-50",
              }
            }
            component="div"
            id="downshift-3-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-49"
              component="div"
              id="downshift-3-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-49"
                classes={
                  Object {
                    "button": "MuiListItem-button-59",
                    "container": "MuiListItem-container-52",
                    "default": "MuiListItem-default-54",
                    "dense": "MuiListItem-dense-55",
                    "disabled": "MuiListItem-disabled-56",
                    "divider": "MuiListItem-divider-57",
                    "focusVisible": "MuiListItem-focusVisible-53",
                    "gutters": "MuiListItem-gutters-58",
                    "root": "MuiListItem-root-51",
                    "secondaryAction": "MuiListItem-secondaryAction-60",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-3-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                  component="div"
                  disabled={false}
                  focusVisibleClassName="MuiListItem-focusVisible-53"
                  id="downshift-3-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-62",
                        "focusVisible": "MuiButtonBase-focusVisible-63",
                        "root": "MuiButtonBase-root-61",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    focusVisibleClassName="MuiListItem-focusVisible-53"
                    id="downshift-3-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-61 MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                      id="downshift-3-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-68",
                              "childLeaving": "MuiTouchRipple-childLeaving-69",
                              "childPulsate": "MuiTouchRipple-childPulsate-70",
                              "ripple": "MuiTouchRipple-ripple-65",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-67",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-66",
                              "root": "MuiTouchRipple-root-64",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-64"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-64"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Google logo is present in a populated list of suggestions 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-47",
          "padding": "MuiList-padding-46",
          "root": "MuiList-root-45",
          "subheader": "MuiList-subheader-48",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-45 MuiList-padding-46"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-4-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-49",
                "selected": "MuiMenuItem-selected-50",
              }
            }
            component="div"
            id="downshift-4-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-49"
              component="div"
              id="downshift-4-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-49"
                classes={
                  Object {
                    "button": "MuiListItem-button-59",
                    "container": "MuiListItem-container-52",
                    "default": "MuiListItem-default-54",
                    "dense": "MuiListItem-dense-55",
                    "disabled": "MuiListItem-disabled-56",
                    "divider": "MuiListItem-divider-57",
                    "focusVisible": "MuiListItem-focusVisible-53",
                    "gutters": "MuiListItem-gutters-58",
                    "root": "MuiListItem-root-51",
                    "secondaryAction": "MuiListItem-secondaryAction-60",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-4-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                  component="div"
                  disabled={false}
                  focusVisibleClassName="MuiListItem-focusVisible-53"
                  id="downshift-4-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-62",
                        "focusVisible": "MuiButtonBase-focusVisible-63",
                        "root": "MuiButtonBase-root-61",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    focusVisibleClassName="MuiListItem-focusVisible-53"
                    id="downshift-4-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-61 MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                      id="downshift-4-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-68",
                              "childLeaving": "MuiTouchRipple-childLeaving-69",
                              "childPulsate": "MuiTouchRipple-childPulsate-70",
                              "ripple": "MuiTouchRipple-ripple-65",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-67",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-66",
                              "root": "MuiTouchRipple-root-64",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-64"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-64"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;

exports[`React component test: <MUIPlacesAutocomplete> Renders correctly for given application state: Suggestions rendered from 'suggestions' state 1`] = `
<MenuList>
  <WithStyles(List)
    className={undefined}
    onBlur={[Function]}
    onKeyDown={[Function]}
    role="menu"
  >
    <List
      className={undefined}
      classes={
        Object {
          "dense": "MuiList-dense-47",
          "padding": "MuiList-padding-46",
          "root": "MuiList-root-45",
          "subheader": "MuiList-subheader-48",
        }
      }
      component="ul"
      dense={false}
      disablePadding={false}
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <ul
        className="MuiList-root-45 MuiList-padding-46"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="menu"
      >
        <WithStyles(MenuItem)
          component="div"
          id="downshift-1-item-0"
          key=".0:$Bellingham, WA, United States"
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          selected={false}
          tabIndex={-1}
        >
          <MenuItem
            classes={
              Object {
                "root": "MuiMenuItem-root-49",
                "selected": "MuiMenuItem-selected-50",
              }
            }
            component="div"
            id="downshift-1-item-0"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            role="menuitem"
            selected={false}
            tabIndex={-1}
          >
            <WithStyles(ListItem)
              button={true}
              className="MuiMenuItem-root-49"
              component="div"
              id="downshift-1-item-0"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              role="menuitem"
              tabIndex={-1}
            >
              <ListItem
                ContainerComponent="li"
                button={true}
                className="MuiMenuItem-root-49"
                classes={
                  Object {
                    "button": "MuiListItem-button-59",
                    "container": "MuiListItem-container-52",
                    "default": "MuiListItem-default-54",
                    "dense": "MuiListItem-dense-55",
                    "disabled": "MuiListItem-disabled-56",
                    "divider": "MuiListItem-divider-57",
                    "focusVisible": "MuiListItem-focusVisible-53",
                    "gutters": "MuiListItem-gutters-58",
                    "root": "MuiListItem-root-51",
                    "secondaryAction": "MuiListItem-secondaryAction-60",
                  }
                }
                component="div"
                dense={false}
                disableGutters={false}
                disabled={false}
                divider={false}
                id="downshift-1-item-0"
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="menuitem"
                tabIndex={-1}
              >
                <WithStyles(ButtonBase)
                  className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                  component="div"
                  disabled={false}
                  focusVisibleClassName="MuiListItem-focusVisible-53"
                  id="downshift-1-item-0"
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  <ButtonBase
                    centerRipple={false}
                    className="MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                    classes={
                      Object {
                        "disabled": "MuiButtonBase-disabled-62",
                        "focusVisible": "MuiButtonBase-focusVisible-63",
                        "root": "MuiButtonBase-root-61",
                      }
                    }
                    component="div"
                    disableRipple={false}
                    disabled={false}
                    focusRipple={false}
                    focusVisibleClassName="MuiListItem-focusVisible-53"
                    id="downshift-1-item-0"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseMove={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                    type="button"
                  >
                    <div
                      className="MuiButtonBase-root-61 MuiListItem-root-51 MuiListItem-default-54 MuiListItem-gutters-58 MuiListItem-button-59 MuiMenuItem-root-49"
                      id="downshift-1-item-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      role="menuitem"
                      tabIndex={-1}
                    >
                      <div
                        key=".0"
                      >
                        <strong
                          key="0"
                          style={
                            Object {
                              "fontWeight": 500,
                            }
                          }
                        >
                          Bellingham
                        </strong>
                        <span
                          key="1"
                          style={
                            Object {
                              "fontWeight": 300,
                            }
                          }
                        >
                          , WA, United States
                        </span>
                      </div>
                      <WithStyles(TouchRipple)
                        center={false}
                        innerRef={[Function]}
                      >
                        <TouchRipple
                          center={false}
                          classes={
                            Object {
                              "child": "MuiTouchRipple-child-68",
                              "childLeaving": "MuiTouchRipple-childLeaving-69",
                              "childPulsate": "MuiTouchRipple-childPulsate-70",
                              "ripple": "MuiTouchRipple-ripple-65",
                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-67",
                              "rippleVisible": "MuiTouchRipple-rippleVisible-66",
                              "root": "MuiTouchRipple-root-64",
                            }
                          }
                        >
                          <TransitionGroup
                            childFactory={[Function]}
                            className="MuiTouchRipple-root-64"
                            component="span"
                            enter={true}
                            exit={true}
                          >
                            <span
                              className="MuiTouchRipple-root-64"
                            />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </div>
                  </ButtonBase>
                </WithStyles(ButtonBase)>
              </ListItem>
            </WithStyles(ListItem)>
          </MenuItem>
        </WithStyles(MenuItem)>
        <div
          key=".1"
          onFocus={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
          tabIndex={-1}
        >
          <span
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <img
            alt=""
            src={Object {}}
          />
        </div>
      </ul>
    </List>
  </WithStyles(List)>
</MenuList>
`;
